--- a/css/styles.css
+++ b/css/styles.css
@@ -1,12 +1,19 @@
 * {
    box-sizing: border-box;
 }
+header {
+   border-bottom: 1px solid grey;
+}
 
 body {
    font-family: "Montserrat", sans-serif;
    font-weight: 400;
    font-size: 16px;
    line-height: 1.5;
+}
+
+footer {
+   border-top: 1px solid grey;
 }
 
 h1 {
@@ -18,10 +25,17 @@ h2 {
    font-size: 24px;
    font-weight: 700;
 }
+.header-logo {
+   max-width: 250px;
+}
 
 h3 {
    font-size: 18px;
    font-weight: 700;
+}
+
+.centered-article {
+   text-align: center;
 }
 
 th {
@@ -42,14 +56,22 @@ a:hover,
 a:focus {
    /* No underlining when hovering over a link */
    text-decoration: none;
+   transition: 0.4s opacity;
 }
 
 a:active {
    color: #489c79;
 }
 
+.berlin-illustration__centered {
+   max-width: 500px;
+   margin: auto;
+}
+
+.button,
 button {
    border: none;
+   display: inline-block;
    font-family: inherit;
    background-color: #6f5e6f;
    color: white;
@@ -57,9 +79,13 @@ button {
    padding: 10px;
    border-radius: 5px;
    border-bottom: 2px solid rgba(0, 0, 0, 0.3);
+   transition: 0.4s opacity;
 }
+
 button:hover,
-button:focus {
+button:focus,
+.button:hover,
+.button:focus {
    cursor: pointer;
    opacity: 0.8;
 }
@@ -70,6 +96,16 @@ button:focus {
 .navigation-list li {
    display: inline-block;
    margin-left: 15px;
+}
+
+.navigation-list__item {
+   /* opacity: 0.8; */
+}
+.navigation-list__item:hover {
+   /* opacity: 0.8; */
+   /* color: #6f5e6f; */
+   color: red;
+   transition: 2s;
 }
 
 .navigation-list__item--active {
@@ -142,4 +178,69 @@ div {
       grid-column: 3 / 3;
       grid-row: 1 / 3;
    }
+}
+
+@media all and (max-width: 500px) {
+   .project-list {
+      grid-template-columns: 1fr;
+   }
+}
+
+@media all and (min-width: 500px) and (max-width: 750px) {
+   .project-list {
+      grid-template-columns: 1fr 1fr;
+   }
+}
+
+@media all and (max-width: 750px) {
+   .project-list {
+      grid-gap: 10px;
+   }
+   .project-list__item:last-child {
+      grid-column: auto / auto;
+      grid-row: auto / auto;
+   }
+   h1 {
+      font-size: 22px;
+   }
+}
+
+@keyframes color-change {
+   0% {
+      fill: #edc655;
+   }
+   50% {
+      fill: #fcffad;
+   }
+   100% {
+      fill: #f76414;
+   }
+}
+.sun {
+   animation: 4s color-change infinite alternate linear;
+}
+@keyframes cloud-move {
+   from {
+      transform: translate(0, 50px);
+   }
+   to {
+      transform: translate(200px, 50px);
+   }
+}
+
+.cloud-front {
+   animation: 30s cloud-move infinite alternate linear;
+}
+
+@keyframes cloud-move-reverse {
+   from {
+      transform: translate(446px, 48px);
+   }
+   to {
+      transform: translate(100px, 48px);
+   }
+}
+
+.cloud-back {
+   animation: 34s cloud-move-reverse infinite alternate linear;
 }
