--- a/css/styles.css
+++ b/css/styles.css
@@ -1,3 +1,9 @@
+:root {
+   --primary-color: #357b70;
+   --secondary-color: #e0b354;
+   --dark-grey: #2b2b2b;
+}
+
 * {
    box-sizing: border-box;
 }
@@ -37,12 +43,12 @@ th {
 }
 
 a {
-   color: #357b70;
+   color: var(--primary-color);
 }
 
 a:visited {
    /* visited link */
-   color: #0254a7;
+   color: var(--secondary-color);
 }
 
 a:hover,
