many fundamental changes
-deleted "bonus task" folder
-font-color adjustments for better readability
-updated about.html
-added "style.production.css" for postprocessing
-changed titles of all pages
-replaced logo with same w/o bg
-renamed :root properties in css

-further small adjustments

--- a/css/style.production.css
+++ b/css/style.production.css
@@ -1,4 +1,12 @@
+/*
+* Prefixed by https://autoprefixer.github.io
+* PostCSS: v8.4.14,
+* Autoprefixer: v10.4.7
+* Browsers: last 2 version
+*/
+
 * {
+   -webkit-box-sizing: border-box;
    box-sizing: border-box;
 }
 
@@ -7,6 +15,12 @@ body {
    font-weight: 400;
    font-size: 16px;
    line-height: 1.5;
+   background-color: #dbefff;
+}
+
+main {
+   padding-top: 50px;
+   padding-bottom: 50px;
 }
 
 h1 {
@@ -37,18 +51,22 @@ th {
    font-weight: 500;
 }
 
+td {
+   padding-top: 10px;
+}
 a {
-   color: black;
+   color: #3c201f;
 }
 
 a:visited {
    /* visited link */
-   color: #c29b46;
+   color: grey;
 }
 
 a:hover,
 a:focus {
    text-decoration: none;
+   -webkit-transition: 0.4s opacity;
    transition: 0.4s opacity;
 }
 
@@ -71,7 +89,10 @@ a:active {
    padding: 10px;
    border-radius: 5px;
    border-bottom: 2px solid rgba(0, 0, 0, 0.3);
+   -webkit-transition: 0.4s opacity;
    transition: 0.4s opacity;
+   -webkit-box-shadow: 4px 3px 19px 0px rgba(0, 0, 0, 0.3);
+   box-shadow: 4px 3px 19px 0px rgba(0, 0, 0, 0.3);
 }
 
 button {
@@ -84,7 +105,10 @@ button {
    padding: 10px;
    border-radius: 5px;
    border-bottom: 2px solid rgba(0, 0, 0, 0.3);
+   -webkit-transition: 0.4s opacity;
    transition: 0.4s opacity;
+   -webkit-box-shadow: 4px 3px 19px 0px rgba(0, 0, 0, 0.3);
+   box-shadow: 4px 3px 19px 0px rgba(0, 0, 0, 0.3);
 }
 
 button:hover,
@@ -93,6 +117,8 @@ button:focus,
 .button:focus {
    cursor: pointer;
    opacity: 0.8;
+   -webkit-box-shadow: none;
+   box-shadow: none;
 }
 
 .navigation-list {
@@ -106,6 +132,7 @@ button:focus,
 
 .navigation-list__item:hover {
    color: red;
+   -webkit-transition: 2s;
    transition: 2s;
 }
 
@@ -131,25 +158,37 @@ div {
 }
 
 .page-header {
+   display: -webkit-box;
+   display: -ms-flexbox;
    display: flex;
    width: 100%;
    padding: 20px;
 }
 
 .page-header__item {
+   -webkit-box-flex: 0;
+   -ms-flex: 0 1 200px;
    flex: 0 1 200px;
 }
 
 .page-header__item:last-child {
+   -webkit-box-flex: 1;
+   -ms-flex-positive: 1;
    flex-grow: 1;
    text-align: right;
 }
 
 .page-footer {
    clear: both;
+   display: -webkit-box;
+   display: -ms-flexbox;
    display: flex;
+   -webkit-box-orient: vertical;
+   -webkit-box-direction: normal;
+   -ms-flex-direction: column;
    flex-direction: column;
    text-align: center;
+   background-color: none;
 }
 
 /* start grid fallback */
@@ -162,7 +201,9 @@ div {
 /*          GRID-LAYOUT         */
 @supports (display: grid) {
    .project-list {
+      display: -ms-grid;
       display: grid;
+      -ms-grid-columns: 1fr 20px 1fr 20px 1fr;
       grid-template-columns: 1fr 1fr 1fr;
       grid-gap: 20px;
    }
@@ -174,17 +215,22 @@ div {
    }
 
    .project-list__item:last-child {
+      -ms-grid-column: 3;
       grid-column: 3/3;
+      -ms-grid-row: 1;
+      -ms-grid-row-span: 2;
       grid-row: 1/3;
    }
 }
 @media all and (max-width: 500px) {
    .project-list {
+      -ms-grid-columns: 1fr;
       grid-template-columns: 1fr;
    }
 }
 @media all and (min-width: 500px) and (max-width: 750px) {
    .project-list {
+      -ms-grid-columns: 1fr 20px 1fr;
       grid-template-columns: 1fr 1fr;
    }
 }
@@ -202,6 +248,17 @@ div {
       font-size: 22px;
    }
 }
+@-webkit-keyframes color-change {
+   0% {
+      fill: #edc655;
+   }
+   50% {
+      fill: #fcffad;
+   }
+   100% {
+      fill: #f76414;
+   }
+}
 @keyframes color-change {
    0% {
       fill: #edc655;
@@ -214,30 +271,59 @@ div {
    }
 }
 .sun {
+   -webkit-animation: 4s color-change infinite alternate linear;
    animation: 4s color-change infinite alternate linear;
+}
+
+@-webkit-keyframes cloud-move {
+   from {
+      -webkit-transform: translate(0, 50px);
+      transform: translate(0, 50px);
+   }
+   to {
+      -webkit-transform: translate(200px, 50px);
+      transform: translate(200px, 50px);
+   }
 }
 
 @keyframes cloud-move {
    from {
+      -webkit-transform: translate(0, 50px);
       transform: translate(0, 50px);
    }
    to {
+      -webkit-transform: translate(200px, 50px);
       transform: translate(200px, 50px);
    }
 }
 .cloud-front {
+   -webkit-animation: 30s cloud-move infinite alternate linear;
    animation: 30s cloud-move infinite alternate linear;
+}
+
+@-webkit-keyframes cloud-move-reverse {
+   from {
+      -webkit-transform: translate(446px, 48px);
+      transform: translate(446px, 48px);
+   }
+   to {
+      -webkit-transform: translate(100px, 48px);
+      transform: translate(100px, 48px);
+   }
 }
 
 @keyframes cloud-move-reverse {
    from {
+      -webkit-transform: translate(446px, 48px);
       transform: translate(446px, 48px);
    }
    to {
+      -webkit-transform: translate(100px, 48px);
       transform: translate(100px, 48px);
    }
 }
 .cloud-back {
+   -webkit-animation: 34s cloud-move-reverse infinite alternate linear;
    animation: 34s cloud-move-reverse infinite alternate linear;
 }
 
