--- a/css/styles.css
+++ b/css/styles.css
@@ -1,5 +1,5 @@
 :root {
-   --unvisited-links: #4086b5;
+   --unvisited-links: #3c201f;
    --active-link: #489c79;
    --visited-link: grey;
    --dark-grey: #2b2b2b;
