--- a/css/styles.scss
+++ b/css/styles.scss
@@ -31,10 +31,6 @@ h2 {
    font-size: 24px;
    font-weight: var(--heading-weight);
 }
-.header-logo {
-   max-width: 250px;
-}
-
 h3 {
    font-size: 18px;
    font-weight: var(--heading-weight);
@@ -137,12 +133,19 @@ div {
 
 .page-header {
    display: flex;
+   justify-content: space-between;
+   flex-flow: row wrap;
    width: 100%;
    padding: 20px;
+   align-items: flex-end;
+}
+
+.header-logo {
+   max-width: 350px;
 }
 
 .page-header__item {
-   flex: 0 1 200px;
+   flex: 0 1 50%;
 }
 
 .page-header__item:last-child {
