--- a/css/style.production.css
+++ b/css/style.production.css
@@ -6,330 +6,387 @@
 */
 
 * {
-   -webkit-box-sizing: border-box;
-   box-sizing: border-box;
+    -webkit-box-sizing: border-box;
+    box-sizing: border-box;
 }
 
 body {
-   font-family: "Montserrat", sans-serif;
-   font-weight: 400;
-   font-size: 16px;
-   line-height: 1.5;
-   background-color: #dbefff;
+    font-family: "Montserrat", sans-serif;
+    font-weight: 400;
+    font-size: 16px;
+    line-height: 1.5;
+    background-color: #dbefff;
 }
 
 h1 {
-   font-size: 30px;
-   font-weight: 700;
+    font-size: 30px;
+    font-weight: 700;
 }
 
 h2 {
-   font-size: 24px;
-   font-weight: 700;
+    font-size: 24px;
+    font-weight: 700;
 }
 
 h3 {
-   font-size: 18px;
-   font-weight: 700;
+    font-size: 18px;
+    font-weight: 700;
+}
+
+.centered-phrase {
+    text-align: center;
 }
 
 .centered-article {
-   text-align: center;
+    text-align: center;
 }
 
 th {
-   font-size: 25px;
-   font-weight: 500;
+    font-size: 25px;
+    font-weight: 500;
 }
 
 a {
-   color: #3c201f;
+    color: #3c201f;
 }
 
 a:visited {
-   /* visited link */
-   color: grey;
+    /* visited link */
+    color: grey;
 }
 
 a:hover,
 a:focus {
-   text-decoration: none;
-   -webkit-transition: 0.4s opacity;
-   transition: 0.4s opacity;
+    text-decoration: none;
+    -webkit-transition: 0.4s opacity;
+    transition: 0.4s opacity;
 }
 
 a:active {
-   color: #489c79;
+    color: #489c79;
 }
 
 .berlin-illustration__centered {
-   max-width: 500px;
-   margin: auto;
+    max-width: 500px;
+    margin: auto;
 }
 
 .button {
-   border: none;
-   display: inline-block;
-   font-family: inherit;
-   background-color: #6f5e6f;
-   color: white;
-   text-decoration: none;
-   padding: 10px;
-   border-radius: 5px;
-   border-bottom: 2px solid rgba(0, 0, 0, 0.3);
-   -webkit-transition: 0.4s opacity;
-   transition: 0.4s opacity;
-   -webkit-box-shadow: 4px 3px 19px 0px rgba(0, 0, 0, 0.3);
-   box-shadow: 4px 3px 19px 0px rgba(0, 0, 0, 0.3);
+    border: none;
+    display: inline-block;
+    font-family: inherit;
+    background-color: #6f5e6f;
+    color: white;
+    text-decoration: none;
+    padding: 10px;
+    border-radius: 5px;
+    border-bottom: 2px solid rgba(0, 0, 0, 0.3);
+    -webkit-transition: 0.4s opacity;
+    transition: 0.4s opacity;
+    -webkit-box-shadow: 4px 3px 19px 0px rgba(0, 0, 0, 0.3);
+    box-shadow: 4px 3px 19px 0px rgba(0, 0, 0, 0.3);
 }
 
 button {
-   border: none;
-   display: inline-block;
-   font-family: inherit;
-   background-color: #6f5e6f;
-   color: white;
-   text-decoration: none;
-   padding: 10px;
-   border-radius: 5px;
-   border-bottom: 2px solid rgba(0, 0, 0, 0.3);
-   -webkit-transition: 0.4s opacity;
-   transition: 0.4s opacity;
-   -webkit-box-shadow: 4px 3px 19px 0px rgba(0, 0, 0, 0.3);
-   box-shadow: 4px 3px 19px 0px rgba(0, 0, 0, 0.3);
+    border: none;
+    display: inline-block;
+    font-family: inherit;
+    background-color: #6f5e6f;
+    color: white;
+    text-decoration: none;
+    padding: 10px;
+    border-radius: 5px;
+    border-bottom: 2px solid rgba(0, 0, 0, 0.3);
+    -webkit-transition: 0.4s opacity;
+    transition: 0.4s opacity;
+    -webkit-box-shadow: 4px 3px 19px 0px rgba(0, 0, 0, 0.3);
+    box-shadow: 4px 3px 19px 0px rgba(0, 0, 0, 0.3);
 }
 
 button:hover,
 button:focus,
 .button:hover,
 .button:focus {
-   cursor: pointer;
-   opacity: 0.8;
-   -webkit-box-shadow: none;
-   box-shadow: none;
+    cursor: pointer;
+    opacity: 0.8;
+    -webkit-box-shadow: none;
+    box-shadow: none;
 }
 
 .navigation-list {
-   list-style-type: none;
+    list-style-type: none;
 }
 
 .navigation-list li {
-   display: inline-block;
-   margin-left: 15px;
+    display: inline-block;
+    margin-left: 15px;
 }
 
 .navigation-list__item:hover {
-   color: red;
-   -webkit-transition: 2s;
-   transition: 2s;
+    color: red;
+    -webkit-transition: 2s;
+    transition: 2s;
 }
 
 .navigation-list__item--active {
-   text-decoration: none;
+    text-decoration: none;
 }
 
 div {
-   padding: 10px;
-   margin: 10px;
+    padding: 10px;
+    margin: 10px;
 }
 
 .profile {
-   max-width: 700px;
-   margin: 0 auto;
+    max-width: 700px;
+    margin: 0 auto;
+}
+
+div.profile {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
 }
 
 .profile__portrait {
-   float: left;
-   max-width: 250px;
-   margin-right: 40px;
-   border-radius: 50%;
+    float: left;
+    max-width: 250px;
+    margin-right: 40px;
+    border-radius: 50%;
+    -webkit-box-ordinal-group: 2;
+    -ms-flex-order: 1;
+    order: 1;
 }
 
 .page-header {
-   display: -webkit-box;
-   display: -ms-flexbox;
-   display: flex;
-   -webkit-box-pack: justify;
-   -ms-flex-pack: justify;
-   justify-content: space-between;
-   -webkit-box-orient: horizontal;
-   -webkit-box-direction: normal;
-   -ms-flex-flow: row wrap;
-   flex-flow: row wrap;
-   width: 100%;
-   padding: 20px;
-   -webkit-box-align: end;
-   -ms-flex-align: end;
-   align-items: flex-end;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-pack: justify;
+    -ms-flex-pack: justify;
+    justify-content: space-between;
+    -webkit-box-orient: horizontal;
+    -webkit-box-direction: normal;
+    -ms-flex-flow: row wrap;
+    flex-flow: row wrap;
+    width: 100%;
+    padding: 0px 10px;
+    -webkit-box-align: end;
+    -ms-flex-align: end;
+    align-items: flex-end;
 }
 
 .header-logo {
-   max-width: 350px;
+    max-width: 350px;
 }
 
 .page-header__item {
-   -webkit-box-flex: 0;
-   -ms-flex: 0 1 50%;
-   flex: 0 1 50%;
+    -webkit-box-flex: 0;
+    -ms-flex: 0 1 50%;
+    flex: 0 1 50%;
 }
 
 .page-header__item:last-child {
-   -webkit-box-flex: 1;
-   -ms-flex-positive: 1;
-   flex-grow: 1;
-   text-align: right;
+    -webkit-box-flex: 1;
+    -ms-flex-positive: 1;
+    flex-grow: 1;
+    text-align: right;
 }
 
 .page-footer {
-   clear: both;
-   display: -webkit-box;
-   display: -ms-flexbox;
-   display: flex;
-   -webkit-box-orient: vertical;
-   -webkit-box-direction: normal;
-   -ms-flex-direction: column;
-   flex-direction: column;
-   text-align: center;
+    clear: both;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+    -ms-flex-direction: column;
+    flex-direction: column;
+    text-align: center;
 }
 
 /* start grid fallback */
 .grid__item {
-   display: inline-block;
-   width: 33%;
+    display: inline-block;
+    width: 33%;
 }
 
 /* end grid fallback */
 /*          GRID-LAYOUT         */
 @supports (display: grid) {
-   .project-list {
-      display: -ms-grid;
-      display: grid;
-      -ms-grid-columns: 1fr 20px 1fr 20px 1fr;
-      grid-template-columns: 1fr 1fr 1fr;
-      grid-gap: 20px;
-   }
+    .project-list {
+        display: -ms-grid;
+        display: grid;
+        -ms-grid-columns: 1fr 20px 1fr 20px 1fr;
+        grid-template-columns: 1fr 1fr 1fr;
+        grid-gap: 20px;
+    }
 
-   .project-list__item {
-      background-color: lightgray;
-      padding: 20px;
-      width: auto;
-   }
+    .project-list__item {
+        background-color: lightgray;
+        padding: 20px;
+        width: auto;
+    }
 
-   .project-list__item:last-child {
-      -ms-grid-column: 3;
-      grid-column: 3/3;
-      -ms-grid-row: 1;
-      -ms-grid-row-span: 2;
-      grid-row: 1/3;
-   }
+    .project-list__item:last-child {
+        -ms-grid-column: 3;
+        grid-column: 3/3;
+        -ms-grid-row: 1;
+        -ms-grid-row-span: 2;
+        grid-row: 1/3;
+    }
 }
-@media all and (max-width: 500px) {
-   .project-list {
-      -ms-grid-columns: 1fr;
-      grid-template-columns: 1fr;
-   }
+
+@media all and (max-width: 550px) {
+    .project-list {
+        -ms-grid-columns: 1fr;
+        grid-template-columns: 1fr;
+    }
+
+    div.profile {
+        display: -webkit-box;
+        display: -ms-flexbox;
+        display: flex;
+        -ms-flex-wrap: wrap;
+        flex-wrap: wrap;
+        -webkit-box-orient: vertical;
+        -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+        flex-direction: column;
+    }
+
+    .profile__portrait {
+        margin: 0;
+    }
+
+    div.profile__image {
+        -ms-flex-item-align: center;
+        -ms-grid-row-align: center;
+        align-self: center;
+    }
+
+    .profile__bio {
+        -ms-flex-item-align: center;
+        -ms-grid-row-align: center;
+        align-self: center;
+    }
 }
+
 @media all and (min-width: 500px) and (max-width: 750px) {
-   .project-list {
-      -ms-grid-columns: 1fr 20px 1fr;
-      grid-template-columns: 1fr 1fr;
-   }
+    .project-list {
+        -ms-grid-columns: 1fr 20px 1fr;
+        grid-template-columns: 1fr 1fr;
+    }
 }
+
 @media all and (max-width: 750px) {
-   .project-list {
-      grid-gap: 10px;
-   }
+    .project-list {
+        grid-gap: 10px;
+    }
 
-   .project-list__item:last-child {
-      grid-column: auto/auto;
-      grid-row: auto/auto;
-   }
+    .project-list__item:last-child {
+        grid-column: auto/auto;
+        grid-row: auto/auto;
+    }
 
-   h1 {
-      font-size: 22px;
-   }
+    h1 {
+        font-size: 22px;
+    }
 }
+
 @-webkit-keyframes color-change {
-   0% {
-      fill: #edc655;
-   }
-   50% {
-      fill: #fcffad;
-   }
-   100% {
-      fill: #f76414;
-   }
+    0% {
+        fill: #edc655;
+    }
+
+    50% {
+        fill: #fcffad;
+    }
+
+    100% {
+        fill: #f76414;
+    }
 }
+
 @keyframes color-change {
-   0% {
-      fill: #edc655;
-   }
-   50% {
-      fill: #fcffad;
-   }
-   100% {
-      fill: #f76414;
-   }
+    0% {
+        fill: #edc655;
+    }
+
+    50% {
+        fill: #fcffad;
+    }
+
+    100% {
+        fill: #f76414;
+    }
 }
+
 .sun {
-   -webkit-animation: 4s color-change infinite alternate linear;
-   animation: 4s color-change infinite alternate linear;
+    -webkit-animation: 4s color-change infinite alternate linear;
+    animation: 4s color-change infinite alternate linear;
 }
 
 @-webkit-keyframes cloud-move {
-   from {
-      -webkit-transform: translate(0, 50px);
-      transform: translate(0, 50px);
-   }
-   to {
-      -webkit-transform: translate(200px, 50px);
-      transform: translate(200px, 50px);
-   }
+    from {
+        -webkit-transform: translate(0, 50px);
+        transform: translate(0, 50px);
+    }
+
+    to {
+        -webkit-transform: translate(200px, 50px);
+        transform: translate(200px, 50px);
+    }
 }
 
 @keyframes cloud-move {
-   from {
-      -webkit-transform: translate(0, 50px);
-      transform: translate(0, 50px);
-   }
-   to {
-      -webkit-transform: translate(200px, 50px);
-      transform: translate(200px, 50px);
-   }
+    from {
+        -webkit-transform: translate(0, 50px);
+        transform: translate(0, 50px);
+    }
+
+    to {
+        -webkit-transform: translate(200px, 50px);
+        transform: translate(200px, 50px);
+    }
 }
+
 .cloud-front {
-   -webkit-animation: 30s cloud-move infinite alternate linear;
-   animation: 30s cloud-move infinite alternate linear;
+    -webkit-animation: 30s cloud-move infinite alternate linear;
+    animation: 30s cloud-move infinite alternate linear;
 }
 
 @-webkit-keyframes cloud-move-reverse {
-   from {
-      -webkit-transform: translate(446px, 48px);
-      transform: translate(446px, 48px);
-   }
-   to {
-      -webkit-transform: translate(100px, 48px);
-      transform: translate(100px, 48px);
-   }
+    from {
+        -webkit-transform: translate(446px, 48px);
+        transform: translate(446px, 48px);
+    }
+
+    to {
+        -webkit-transform: translate(100px, 48px);
+        transform: translate(100px, 48px);
+    }
 }
 
 @keyframes cloud-move-reverse {
-   from {
-      -webkit-transform: translate(446px, 48px);
-      transform: translate(446px, 48px);
-   }
-   to {
-      -webkit-transform: translate(100px, 48px);
-      transform: translate(100px, 48px);
-   }
+    from {
+        -webkit-transform: translate(446px, 48px);
+        transform: translate(446px, 48px);
+    }
+
+    to {
+        -webkit-transform: translate(100px, 48px);
+        transform: translate(100px, 48px);
+    }
 }
+
 .cloud-back {
-   -webkit-animation: 34s cloud-move-reverse infinite alternate linear;
-   animation: 34s cloud-move-reverse infinite alternate linear;
+    -webkit-animation: 34s cloud-move-reverse infinite alternate linear;
+    animation: 34s cloud-move-reverse infinite alternate linear;
 }
 
 /* NEWSLETTER SUBSCRIPTION CSS */
 .img-float__right {
-   float: right;
-   width: 5em;
+    float: right;
+    width: 5em;
 }
