--- a/css/styles.css
+++ b/css/styles.css
@@ -31,9 +31,14 @@ h2 {
    font-size: 24px;
    font-weight: var(--heading-weight);
 }
+
 h3 {
    font-size: 18px;
    font-weight: var(--heading-weight);
+}
+
+.centered-phrase {
+   text-align: center;
 }
 
 .centered-article {
@@ -96,6 +101,7 @@ button:focus,
    opacity: 0.8;
    box-shadow: none;
 }
+
 .navigation-list {
    list-style-type: none;
 }
@@ -124,11 +130,17 @@ div {
    margin: 0 auto;
 }
 
+div.profile {
+   display: flex;
+}
+
+
 .profile__portrait {
    float: left;
    max-width: 250px;
    margin-right: 40px;
    border-radius: 50%;
+   order: 1;
 }
 
 .page-header {
@@ -136,7 +148,7 @@ div {
    justify-content: space-between;
    flex-flow: row wrap;
    width: 100%;
-   padding: 20px;
+   padding: 0px 10px;
    align-items: flex-end;
 }
 
@@ -165,6 +177,7 @@ div {
    display: inline-block;
    width: 33%;
 }
+
 /* end grid fallback */
 
 /*          GRID-LAYOUT         */
@@ -188,9 +201,27 @@ div {
    }
 }
 
-@media all and (max-width: 500px) {
+@media all and (max-width: 550px) {
    .project-list {
       grid-template-columns: 1fr;
+   }
+
+   div.profile {
+      display: flex;
+      flex-wrap: wrap;
+      flex-direction: column;
+   }
+
+   .profile__portrait {
+      margin: 0;
+   }
+
+   div.profile__image {
+      align-self: center;
+   }
+
+   .profile__bio {
+      align-self: center;
    }
 }
 
@@ -204,10 +235,12 @@ div {
    .project-list {
       grid-gap: 10px;
    }
+
    .project-list__item:last-child {
       grid-column: auto / auto;
       grid-row: auto / auto;
    }
+
    h1 {
       font-size: 22px;
    }
@@ -217,20 +250,25 @@ div {
    0% {
       fill: var(--sun1);
    }
+
    50% {
       fill: var(--sun2);
    }
+
    100% {
       fill: var(--sun3);
    }
 }
+
 .sun {
    animation: 4s color-change infinite alternate linear;
 }
+
 @keyframes cloud-move {
    from {
       transform: translate(0, 50px);
    }
+
    to {
       transform: translate(200px, 50px);
    }
@@ -244,6 +282,7 @@ div {
    from {
       transform: translate(446px, 48px);
    }
+
    to {
       transform: translate(100px, 48px);
    }
