last finishing before submitting
-additional screenshots of no linting errors
-replaced logo and adjusted size

--- a/css/styles.scss
+++ b/css/styles.scss
@@ -22,6 +22,11 @@ body {
    background-color: #dbefff;
 }
 
+hr {
+   margin: 0;
+   padding: 0;
+}
+
 h1 {
    font-size: 30px;
    font-weight: var(--heading-weight);
@@ -158,7 +163,7 @@ div.profile {
 }
 
 .header-logo {
-   max-width: 350px;
+   max-width: 200px;
 }
 
 .page-header__item {
