--- a/css/style.production.css
+++ b/css/style.production.css
@@ -10,12 +10,20 @@
     box-sizing: border-box;
 }
 
+header {
+    background-color: #e5ca91;
+}
+
 body {
     font-family: "Montserrat", sans-serif;
     font-weight: 400;
     font-size: 16px;
     line-height: 1.5;
     background-color: #dbefff;
+}
+
+footer {
+    background-color: #e5ca91;
 }
 
 hr {
@@ -80,7 +88,7 @@ a:active {
     border: none;
     display: inline-block;
     font-family: inherit;
-    background-color: #6f5e6f;
+    background-color: #7356fa;
     color: white;
     text-decoration: none;
     padding: 10px;
@@ -96,7 +104,7 @@ button {
     border: none;
     display: inline-block;
     font-family: inherit;
-    background-color: #6f5e6f;
+    background-color: #7356fa;
     color: white;
     text-decoration: none;
     padding: 10px;
@@ -243,9 +251,11 @@ input {
     }
 
     .project-list__item {
-        background-color: lightgray;
+        color: white;
+        background-color: #2e2264;
         padding: 20px;
         width: auto;
+        border-radius: 12px;
     }
 
     .project-list__item:last-child {
@@ -254,6 +264,10 @@ input {
         -ms-grid-row: 1;
         -ms-grid-row-span: 2;
         grid-row: 1/3;
+    }
+
+    .portfolio-link {
+        color: #edc655;
     }
 }
 
